--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,6 @@ android {
     }
     buildFeatures {
         dataBinding true
-        viewBinding true
     }
 }
 
@@ -34,9 +33,13 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-rc1'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.firebase:firebase-database:19.2.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+    apply plugin: 'com.google.gms.google-services'
+    implementation 'com.google.android.material:material:<version>'
+
 }
